# WeatherStation.Api/openapi/openapi.json
@@ -66,22 +66,22 @@
           }
         },
         "responses": {
-          "200": {
-            "description": "OK",
+          "201": {
+            "description": "Created",
             "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/WeatherReading"
-                }
-              },
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/WeatherReading"
                 }
-              },
-              "text/json": {
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/WeatherReading"
+                  "type": "string"
                 }
               }
             }
